--- a/FreeCRMTest/src/main/java/com/crm/qa/config/config.properties
+++ b/FreeCRMTest/src/main/java/com/crm/qa/config/config.properties
@@ -1,5 +1,5 @@
-userName=rupeshjems@gmail.com
-password=Chanuhan@123
+userName=rupeshjems
+password=Chanuhan@1
 
 browser=chrome
-url=https://freecrm.com/
+url=https://rmpro.com/
